maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:15: error: not found: value estfaceMur
	if(estfaceMur){
           ^